[package]
name = "proxyer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
hyper = { version="0.14", features = ["full"]}
hyper-rustls = "0.23"
anyhow = "1"